# mnist-parser

./: .gitignore  README.md  download-mnist.sh  meson.build
src/: main.vala  mnist-images.vala  mnist-labels.vala  mnist.vala
